--- a/src/pwa/manifest.json
+++ b/src/pwa/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "hydrApp",
   "short_name": "hydrApp",
-  "theme_color": "#000000",
-  "background_color": "#000000",
+  "theme_color": "#2196f3",
+  "background_color": "#3767AD",
   "display": "standalone",
   "orientation": "portrait",
   "scope": "/hydrApp/",
