--- a/package.json
+++ b/package.json
@@ -1,52 +1,68 @@
 {
-  "name": "wtf-gulp-starter",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "predeploy": "gulp build",
-    "deploy": "gh-pages -d dist"
+  "private": true,
+  "engines": {
+    "node": ">=4"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/maciejkorsan/wtf-gulp-starter.git"
+  "dependencies": {
+    "modernizr": "^3.7.1",
+    "node-sass": "^4.13.1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/maciejkorsan/wtf-gulp-starter/issues"
-  },
-  "homepage": "https://github.com/maciejkorsan/wtf-gulp-starter#readme",
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
-    "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/register": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
     "autoprefixer": "^9.5.1",
-    "babel-loader": "^8.0.6",
-    "browser-sync": "^2.26.7",
-    "gh-pages": "^2.0.1",
-    "gulp": "^4.0.1",
-    "gulp-autoprefixer": "^6.1.0",
+    "browser-sync": "^2.26.5",
+    "chai": "^4.2.0",
+    "cross-env": "^5.2.0",
+    "cssnano": "^4.1.10",
+    "del": "^4.1.1",
+    "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
-    "gulp-notify": "^3.2.0",
+    "gulp-cli": "^2.2.0",
+    "gulp-eslint": "^5.0.0",
+    "gulp-filter": "^6.0.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^6.0.0",
+    "gulp-load-plugins": "^1.6.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.0.2",
+    "gulp-size": "^3.0.0",
     "gulp-sourcemaps": "^2.6.5",
-    "node-sass": "^4.12.0",
-    "through2": "^3.0.1",
-    "vinyl-named": "^1.1.0",
-    "webpack": "^4.35.3",
-    "webpack-sources": "^1.3.0",
-    "webpack-stream": "^5.2.1"
+    "gulp-uglify": "^3.0.2",
+    "gulp-useref": "^3.1.6",
+    "mkdirp": "^0.5.1",
+    "mocha": "^6.2.2",
+    "yargs": "13.2.4"
   },
-  "babel": {
-    "presets": [
-      "@babel/preset-env"
-    ]
+  "scripts": {
+    "serve:test": "cross-env NODE_ENV=test gulp serve",
+    "serve:dist": "cross-env NODE_ENV=production gulp serve",
+    "start": "gulp serve",
+    "build": "cross-env NODE_ENV=production gulp",
+    "test": "npm run serve:test",
+    "tasks": "gulp --tasks"
   },
-  "dependencies": {}
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "Firefox ESR"
+  ],
+  "eslintConfig": {
+    "parserOptions": {
+      "sourceType": "module"
+    },
+    "env": {
+      "es6": true,
+      "node": true,
+      "browser": true
+    },
+    "rules": {
+      "quotes": [
+        2,
+        "single"
+      ]
+    }
+  }
 }
