--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "autoprefixer": "^9.5.1",
+    "babel-eslint": "^10.0.3",
     "browser-sync": "^2.26.5",
     "chai": "^4.2.0",
     "cross-env": "^5.2.0",
@@ -50,6 +51,7 @@
     "Firefox ESR"
   ],
   "eslintConfig": {
+    "parser": "babel-eslint",
     "parserOptions": {
       "sourceType": "module"
     },
