--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-useref": "^3.1.6",
     "mkdirp": "^0.5.1",
     "mocha": "^6.2.2",
+    "webpack": "^4.42.0",
     "yargs": "13.2.4"
   },
   "scripts": {
